# Real-Time-Network-Threat-Detection-System

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/threatdetector/: BoundedQueue.hpp  FeatureConfig.hpp  FeatureExtractor.hpp  InferenceEngine.hpp  OnnxModel.hpp  Packet.hpp  PacketSource.hpp
cpp/src/: FeatureConfig.cpp  FeatureExtractor.cpp  InferenceEngine.cpp  OnnxModel.cpp  PacketSource.cpp  main.cpp
data/: sample_flows.csv
docs/: architecture.md
python/: requirements.txt  train_anomaly_model.py
tests/: test_feature_contract.py
